syntax = "proto3";

package pb;

option go_package = "./pb";

message AddedPatientResult{
    string value = 1;
}

message AddPatientParameters{
    string userName = 1;
    string nic = 2;
    string tellNo = 3;
    string address = 4;
    string userEmail = 5;
    string userPwd = 6;
    string createdAt = 7;

}
message UpdatePatientParameters{
    string userId =1;
    string userName = 2;
    string nic = 3;
    string tellNo = 4;
    string address = 5;
    string userEmail = 6;
    string userPwd = 7;
    string createdAt = 8;

}

message PatientResult{
    string patient_id =1;
    string nic = 2;
    string first_name = 3;
    string middle_name = 4;
    string last_name = 5;
    string dob = 6;
    string address_line_one = 7;
    string address_line_two = 8;
    string city = 9;
    string state = 10;
    string country = 11;
    string tell_no = 12;
    string email = 13;
    string password = 14;
    string sex = 15;
    float height =16;
    float weight =17;
    string blood_group = 18;
    string marital_state = 19;
    string occupation = 20;
    string nationality = 21;
    int64 family_id = 22;

}



message patientListResult{
    repeated PatientResult patients =1;

}

message GetPatientsByNICParameters{
    string nic = 1;
}

message GetPatientsByNameParameters{
    string name = 1;
}

message GetPatientsByTellNoParameters{
    string tellNo = 1;
}

message GetPatientsByIDParameters{
    string patientId = 1;
}


message GetPatientsParameters{
    
}

